correction cards 1440px , and height carrousel version mobile

--- a/src/scss/AppartementCards.css
+++ b/src/scss/AppartementCards.css
@@ -1,7 +1,6 @@
 .containerAppartement {
   margin-top: 50px;
   display: flex;
-  gap: 30px;
   justify-content: center;
   width: 100%;
 }
@@ -37,15 +36,20 @@
   justify-content: center;
   width: 90%;
   flex-wrap: wrap;
-  gap: 100px;
+  gap: 90px;
   border-radius: 25px;
   background-color: #f6f6f6;
   padding: 40px;
 }
+@media (min-width: 1150px) and (max-width: 1571px) {
+  .row {
+    gap: 20px;
+    width: 100%;
+  }
+}
 @media (max-width: 1039px) {
   .row {
     width: 100%;
-    background-color: white;
   }
 }
 
