--- a/src/scss/CarrouselAppartement.scss
+++ b/src/scss/CarrouselAppartement.scss
@@ -4,6 +4,14 @@
   height: 415px;
   overflow: hidden;
 
+  @media (max-width: 580px) {
+    width: 100%;
+    height: 255px;
+    overflow: hidden;
+    margin: auto;
+
+  }
+
   img {
     border-radius: 25px;
     object-fit: cover;
